<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textPrimary"
    tools:context=".CameraActivity">

    <!-- Превью камеры -->
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Нижняя панель кнопок -->
    <LinearLayout
        android:id="@+id/footerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Кнопка для фотографирования -->
        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/button_round_background"
            android:padding="16dp"
            android:text="@string/take_photo"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <!-- Кнопка для возврата на главную -->
        <Button
            android:id="@+id/button_return_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_round_background"
            android:padding="16dp"
            android:text="@string/to_main_page"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <!-- Текст с подписью -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/made_by"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>